--- a/metadata.yaml
+++ b/metadata.yaml
@@ -49,5 +49,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Great Britain -- History -- Humor'
 - !lcc 'DA'
+- GITenberg
 title: The Comic History Of England
 url: http://www.gutenberg.org/ebooks/44860
